Refactor login page layout and styles for improved design and usability

--- a/index.html
+++ b/index.html
@@ -5,65 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ga+Maamli&family=Open+Sans:ital,wdth,wght@1,91.5,720&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="header">
-      <div class="left">
-        <div class="left-img">
-          <img src="./imgs/logo.svg" alt="" />
-        </div>
-        <div class="left-text">
-          <div class="bold">
-            <a href="">Home</a>
+    <div class="poppins-regular">
+      <div class="header">
+        <div class="left">
+          <div class="left-img">
+            <img src="./imgs/logo.svg" alt="" />
           </div>
-          <a href="">Web Designs</a>
-          <a href="">Mobile Designs</a>
-          <a href="">Design Principle</a>
-          <a href="">Illutrations</a>
+          <div class="left-text">
+            <div class="bold">
+              <a href="">Home</a>
+            </div>
+            <a href="">Web Designs</a>
+            <a href="">Mobile Designs</a>
+            <a href="">Design Principle</a>
+            <a href="">Illutrations</a>
+          </div>
+        </div>
+        <div class="right">
+          <select name="" id="">
+            <option value="">English (United States)</option>
+          </select>
+          <button class="btn-login">Log in</button>
+          <button class="btn-start">Start free trial</button>
         </div>
       </div>
-      <div class="right">
-        <select name="" id="">
-          <option value="">English (United States)</option>
-        </select>
-        <button class="btn-login">Log in</button>
-        <button class="btn-start">Start free trial</button>
-      </div>
-    </div>
-    <div class="background">
-      <div class="login">
-        <div class="center">
-          <h1>Log in</h1>
-        </div>
-        <div class="center">
-          <p>New to Design Space ? <a href="">Sign up for free</a></p>
-        </div>
-        <div class="text">
-          <p>Email address</p>
-          <input type="text" />
-          <div class="between">
-            <p>Password</p>
-            <div class="hide">
-              <img src="./imgs/hide.svg" alt="" />
-              <p>Hide</p>
+      <div class="background">
+        <div class="login">
+          <div class="login-title">
+            <h1 class="poppins-medium">Log in</h1>
+            <p>New to Design Space ? <a href="">Sign up for free</a></p>
+          </div>
+          <div class="text">
+            <div class="text-grap1">
+              <p>Email address</p>
+              <input type="text" />
+              <div class="between">
+                <p>Password</p>
+                <div class="hide">
+                  <img src="./imgs/hide.svg" alt="" />
+                  <p>Hide</p>
+                </div>
+              </div>
+              <input type="text" />
+              <a href="">Forget Password ?</a>
+            </div>
+            <div class="text-grap2">
+              <button class="btn-login2">Log in</button>
+              <div class="img-button">
+                <button class="btn-img">
+                  <img src="./imgs/fb.svg" alt="" />
+                </button>
+                <button class="btn-img">
+                  <img src="./imgs/apple.svg" alt="" />
+                </button>
+                <button class="btn-img">
+                  <img src="./imgs/gg.svg" alt="" />
+                </button>
+                <button class="btn-img">
+                  <img src="./imgs/twitter.svg" alt="" />
+                </button>
+              </div>
+              <button class="btn-icon">
+                <img src="./imgs/lock.svg" alt="" />
+                <p>Log in with SSO</p>
+              </button>
             </div>
           </div>
-          <input type="text" />
         </div>
-        <br />
-        <a href="">Forget Password</a>
-        <br />
-        <button class="btn-login2">Log in</button>
-        <div class="img-button">
-          <button class="btn-img"><img src="./imgs/fb.svg" alt="" /></button>
-          <button class="btn-img"><img src="./imgs/apple.svg" alt="" /></button>
-          <button class="btn-img"><img src="./imgs/gg.svg" alt="" /></button>
-          <button class="btn-img"><img src="./imgs/twitter.svg" alt="" /></button>
-        </div>
-        <button>
-          <img src="./imgs/lock.svg" alt="" />
-          <p>Log in with SSO</p>
-        </button>
       </div>
     </div>
   </body>
